--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,7 +32,7 @@ open_scenes=PackedStringArray("res://paddle.tscn", "res://ball.tscn", "res://fie
 current_scene="res://stateful_game.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=4
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -40,11 +40,12 @@ selected_bottom_panel_item=0
 screen=0
 mode="maximized"
 position=Vector2i(0, 508)
+size=Vector2i(1719, 1368)
 
 [ScriptEditor]
 
 open_scripts=["res://game.gd", "res://paddle.gd", "res://stateful_game.gd", "res://states.gd"]
-selected_script="res://states.gd"
+selected_script=""
 open_help=["Input"]
 script_split_offset=200
 list_split_offset=0
