--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://readme.md")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -32,7 +32,7 @@ open_scenes=PackedStringArray("res://paddle.tscn", "res://ball.tscn", "res://fie
 current_scene="res://stateful_game.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=4
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -44,8 +44,8 @@ size=Vector2i(1719, 1368)
 
 [ScriptEditor]
 
-open_scripts=["res://game.gd", "res://paddle.gd", "res://stateful_game.gd", "res://states.gd"]
-selected_script=""
+open_scripts=["res://game.gd", "res://paddle.gd", "res://readme.md", "res://stateful_game.gd", "res://states.gd"]
+selected_script="res://readme.md"
 open_help=["Input"]
 script_split_offset=200
 list_split_offset=0
